--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
+    "framer-motion": "^10.16.4",
+    "gsap": "^3.12.2",
     "normalize": "^0.3.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.2",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "react-youtube": "^10.1.0",
