--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.2",
-    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "react-youtube": "^10.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
