--- a/front/package.json
+++ b/front/package.json
@@ -8,9 +8,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
+    "http-proxy-middleware": "^2.0.6",
     "mysql": "^2.18.1",
     "normalize": "^0.3.1",
     "normalize.css": "^8.0.1",
@@ -48,5 +50,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
