--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
+    "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
     "gsap": "^3.12.2",
     "http-proxy-middleware": "^2.0.6",
@@ -24,7 +25,8 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "react-youtube": "^10.1.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
