--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.1",
+    "openai": "^4.19.0",
     "sequelize": "^6.33.0"
   },
   "main": "app.js",
