--- a/front/package.json
+++ b/front/package.json
@@ -11,7 +11,7 @@
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^10.16.5",
     "gsap": "^3.12.2",
     "http-proxy-middleware": "^2.0.6",
     "mysql": "^2.18.1",
@@ -24,6 +24,7 @@
     "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
+    "react-spring": "^9.7.3",
     "react-youtube": "^10.1.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
