--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tosspayments/payment-widget-sdk": "^0.10.0",
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
@@ -15,6 +16,7 @@
     "gsap": "^3.12.2",
     "http-proxy-middleware": "^2.0.6",
     "mysql": "^2.18.1",
+    "nanoid": "^5.0.3",
     "normalize": "^0.3.1",
     "normalize.css": "^8.0.1",
     "popper.js": "^1.16.1",
