--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "formik": "^2.4.5",
+    "openai": "^4.20.1",
     "react-router-dom": "^6.18.0",
     "yup": "^1.3.2"
   },
